--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@reduxjs/toolkit": "^2.6.1",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "react": "18.2.0",
-    "react-native": "0.73.11"
+    "react-native": "0.73.11",
+    "react-native-audio-recorder-player": "^3.6.12",
+    "react-native-fs": "^2.20.0",
+    "react-native-sound": "^0.11.2",
+    "react-native-webrtc": "^124.0.5",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
